@@ -1,3 +1,7 @@
+2012-08-01  Mirko Vukovic  <mirko.vukovic@us.tel.com>
+
+	* symbol-name-queries.lisp (@!-symbol-p): Added length parameter
+
 2012-07-06  Mirko Vukovic  <mirko.vukovic@us.tel.com>
 
 	* my-utils/symbol-name-queries/symbol-name-queries.lisp
